--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
   </head>
   <body>
     <div class="container">
-      <h1>weather</h1>
+      <div class="weather-app">
+        <h1>Paris ☀</h1>
+        <h2>22°C|°F</h2>
+        <div class="row">
+          <div class="col">
+            <ul>
+              <li>Sunrise at 06:02 AM local time (UTC + 1)</li>
+              <li>Sunset at 18:50 PM local time (UTC + 1)</li>
+            </ul>
+          </div>
+          <div class="col">
+            <ul>
+              <li>Wind: km/h</li>
+              <li>Humidity:36</li>
+              <li>Pressure: 760 hPa | mb</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
   <script src="src/index.js"></script>
